--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "battleship.io",
   "version": "1.0.0",
   "description": "socket.io driven battleship host",
+	"private": true,
   "scripts": {
 		"start": "node server.js"
   },
